# yamal

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  VERSION  configure  meson.build  meson_options.txt  setup.py  versioncheck
.github/: update-docs  update-docs.in
.github/workflows/: cmake-pr-centos.yml  cmake-pr-ubuntu.yml  cmake-pr.yml  cmake-prerel.yml  cmake-rel-candidate.yml  cmake-rel-centos.yml  cmake-rel-ubuntu.yml  cmake-rel.yml  cmake.yml  draftcheck  rel-pub.yml  versioncheck  versioncheck.py  versioncheck.sh
docs/: Announcement-C-API.md  CMakeLists.txt  Channel-C-API.md  Control-C-API.md  Cursor-C-API.md  Data-C-API.md  Doxyfile.in  Glob-C-API.md  Index-C-API.md  Peer-C-API.md  README.md  Sequence-C-API.md  Stream-C-API.md  Streams-C-API.md  Subscription-C-API.md  Time-C-API.md  Timeline-C-API.md  Tools.md  YTP-Protocol.md  YTP-Python-API.md  Yamal-C-API.md  conf.py  index.rst
include/: meson.build  version.h.in
include/cmp/: cmp.h  serialization.hpp
include/fmc/: alignment.h  cmdline.h  component.h  config.h  debug.h  decimal.h  decimal128.h  decimal64.h  endianness.h  error.h  extension.h  files.h  fxp128.h  fxpt128.h  math.h  memory.h  platform.h  prio_queue.h  process.h  rational64.h  reactor.h  rprice.h  signals.h  sockets.h  string.h  test.h  time.h
include/fmc++/: as_ref.hpp  component.hpp  convert.hpp  counters.hpp  decimal.hpp  decimal128.hpp  decimal64.hpp  elasticsearch.hpp  error.hpp  fs.hpp  fxpt128.hpp  gtestwrap.hpp  lazy_rem_vector.hpp  logger.hpp  maybe.hpp  memory.hpp  metatable.hpp  misc.hpp  mpl.hpp  ordered_map.hpp  pool.hpp  rational64.hpp  rprice.hpp  serialization.hpp  serialize.hpp  shared_map.hpp  side.hpp  stable_map.hpp  stackdump.hpp  static_vector.hpp  strings.hpp  threaded.hpp  time.hpp  units.hpp  websocket.hpp
include/fmc++/config/: config.hpp  serialize.hpp  variant_map.hpp
include/fmc/uthash/: uthash.h  utlist.h  utstack.h
include/json/: json.hpp
include/libdecnumber/: config.h  dconfig.h  decContext.h  decContextSymbols.h  decDPD.h  decNumberLocal.h  decQuad.h  gstdint.h
include/murmur3/: murmur3.h
include/tclap/: MultiArg.h  StandardTraits.h  ValueArg.h
include/uthash/: utarray.h  uthash.h  utheap.h  utringbuffer.h  utstring.h
include/ytp/: announcement.h  api.h  block.h  channel.h  control.h  cursor.h  data.h  errno.h  glob.h  index.h  meson.build  peer.h  rotating_sequence.h  sequence.h  stream.h  streams.h  subscription.h  time.h  timeline.h  version.h.in  yamal.h
include/ytp++/: yamal.hpp
install/: meson.build
lib/pkgconfig/: fmc++.pc.in  fmc.pc.in  ytp.pc.in
python/: CMakeLists.txt  __init__.py  meson.build  py_ytp.cpp  requirements.txt  setup.py  ytp.cpp  ytp_base.cpp  ytp_base.py  ytp_base.pyi
python/docs/: CMakeLists.txt
python/docs/source/: conf.py  index.rst
python/include/: meson.build
python/include/fmc++/python/: component.hpp  config.hpp  wrapper.hpp
python/include/ytp/: py_wrapper.h
python/include/ytp/python/: py_api.h  py_wrapper.h
python/scripts/: test-yamal-python  yamal-run.py
python/src/: __init__.py  main.c  sys_base.c  testmodule.c  yamal8.cpp  ytp.cpp  ytp.pyi
python/src/fmc++/python/: config.cpp
python/test/: CMakeLists.txt
python/tests/: CMakeLists.txt  ytp.py  ytp8.py
python/tests/fmc++/: config.cpp  variant_map.cpp
python/tools/: cli.py
python/tools/commands/: __init__.py  get_mod.py  tail_mod.py
src/: channel.cpp  control.cpp  control.hpp  endianness.h  errno.cpp  meson.build  peer.cpp  sequence.cpp  time.cpp  timeline.cpp  timeline.hpp  utils.cpp  utils.hpp  yamal.cpp
src/cmp/: cmp.c
src/fmc/: cmdline.c  cmp.c  component.c  config.c  config.cpp  decimal.c  decimal128.c  decimal128.cpp  error.cpp  extension.c  extension.cpp  files.cpp  fxpt128.c  math.c  memory.c  murmur3.c  prio_queue.c  process.cpp  rational64.cpp  reactor.c  rprice.cpp  signals.c  sockets.cpp  string.c  test.cpp  time.cpp
src/fmc++/: config.cpp  stackdump.cpp  websocket.cpp
src/libdecnumber/: decBasic.c  decCommon.c  decContext.c  decQuad.c
src/murmur3/: murmur3.c
src/tools/: fmc-component.cpp  meson.build  yamal-common.hpp  yamal-cp.cpp  yamal-daemon.cpp  yamal-latency.cpp  yamal-local-perf.cpp  yamal-perf.cpp  yamal-replay.cpp  yamal-run.cpp  yamal-stats.cpp  yamal-tail.cpp  ytp-daemon.cpp  ytp-perf.cpp  ytp-stats.cpp  ytp-tail.cpp
src/ytp/: announcement.c  api.cpp  atomic.h  block.cpp  channel.cpp  control.cpp  control.hpp  cursor.c  cursor.h  data.c  endianess.h  glob.cpp  index.c  peer.cpp  rotating_sequence.cpp  sequence.cpp  sequence.hpp  stream.c  stream.cpp  stream.hpp  streams.c  subscription.c  time.cpp  timeline.cpp  timeline.hpp  yamal.c  yamal.cpp  yamal.hpp
subprojects/: common.wrap
tests/: CMakeLists.txt  channel.cpp  cli.py  compiles.c  containers.cpp  control.cpp  gtestwrap.hpp  meson.build  peer.cpp  pyext.py  sequence.cpp  time.cpp  timeline.cpp  transport_writer_test  utils.h  yamal.cpp
tests/data/: synth_book.ore
tests/decnumber/: CMakeLists.txt  decimal.cpp
tests/fmc/: CMakeLists.txt  cmdline.cpp  compiles.c  component.cpp  config.cpp  decimal128.cpp  error.cpp  extension.cpp  files.cpp  iocomponent.c  iocomponent.h  iocomponents.c  math.cpp  memory.cpp  meson.build  priority_queue.cpp  shutdowncomponent.c  shutdowncomponent.h  testcomponent.c  testcomponent.ini  testcomponent.json  testcomponent_array_cfg.ini  testcomponent_array_cfg.json  testcomponent_only_cfg.ini  testcomponent_only_cfg.json  time.cpp
tests/fmc++/: CMakeLists.txt  config.cpp  containers.cpp  counters.cpp  decimal128.cpp  error.cpp  fxpt128.cpp  meson.build  rational64.cpp  rprice.cpp  shared_map.cpp  static_vector.cpp  strings.cpp  threaded.cpp  variant_map.cpp
tests/tools/: CMakeLists.txt  daemon.cpp  state_transition.cfg
tests/ytp/: CMakeLists.txt  buildmsg.hpp  channel.cpp  common.cpp  compiles.c  containers.cpp  control.cpp  meson.build  peer.cpp  sequence.cpp  stream.cpp  time.cpp  timeline.cpp  tostr.hpp  yamal.cpp
tests/ytp++/: CMakeLists.txt  yamal.cpp
tests/ytp/data/: synth_book.ore
(+1 files in other folders)
